Restarted HTML and CSS for project, Head is ccomplete, starting on Nav. Need to format to a mobile first design before continuing down desktop path

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=,, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dillon's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="../docs/favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="container"> <!--Sets the entire page into an overall container to set flex-->
+      <header class="header"> <!--Sets the 1st section of the page called Header, this will incorporate My logo and the Nav bar-->
+        <img src="" alt="A Logo for Dillon's Portfolio Website" srcset="" class="logo">
+        <nav class="nav">
+          <ul class="navlinks">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Contact</a></li>
+            <li class="dropdown"><a href="/">Blogs</a>
+              <ul class="dropdown-menu">
+                <li><a href="/">Blog 1</a></li>
+                <li><a href="/">Blog 2</a></li>
+                <li><a href="/">Blog 3</a></li>
+                <li><a href="/">Blog 4</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
 </body>
 </html>
