index page completed with mobile first

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- header section -->
 <header class="header">
   <div class="container">
-    <a href="/"><img src="assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
+    <a href="index.html"><img src="assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
   </div>
 </header>
   
@@ -57,7 +57,7 @@
 <!-- Footer section -->
 <footer class="footer">
   <div class="container">
-    <ul>
+    <ul class="left-footer">
       <li>
         <a href="#">
           <img src="assets/github.svg" alt="GitHub">
@@ -69,9 +69,11 @@
         </a>
       </li>
     </ul>
-    <a href="mailto:14582@coderacademy.edu.au">Contact Me! 
-      <img src="assets/send.png" alt="A Mail Icon" srcset="">
-    </a>
+    <div class="contact-foot">
+      <a href="mailto:14582@coderacademy.edu.au">Contact Me! 
+        <img src="assets/send.png" alt="A Mail Icon" srcset="">
+      </a>
+    </div>
   </div>
 </footer>
 
