--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -40,7 +40,19 @@
   <!-- Main Section -->
 <section class="jumbotron">
   <div class="container">
+      <form action="contact-form">
+        <label for="cont-name">Full Name:</label>
+        <input type="text" id="cont-name" name="full-name" placeholder="Your Name">
 
+        <label for="cont-email">Enter Email:</label>
+        <input type="email" id="cont-email" name="email" placeholder="Email@Email.com">
+        
+        <label for="cont-message">Your message:</label>
+        <textarea id="cont-message" name="message" placeholder="Write your message here:">
+
+        <input type="submit" Value="Submit">
+
+      </form>
   </div>
 </section>
 
