--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -13,7 +13,7 @@
   <!-- header section -->
 <header class="header">
   <div class="container">
-    <a href="index.html"><img src="../assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
+    <a href="../index.html"><img src="../assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
   </div>
 </header>
   
@@ -40,19 +40,29 @@
   <!-- Main Section -->
 <section class="jumbotron">
   <div class="container">
+    <div class="form-header">
+      <h2>How to contact</h2>
+      <h4>Either use this handy form, or use any of the other details provided!</h4>
+    </div>
+    <div class="form-part">
       <form action="contact-form">
         <label for="cont-name">Full Name:</label>
         <input type="text" id="cont-name" name="full-name" placeholder="Your Name">
-
         <label for="cont-email">Enter Email:</label>
         <input type="email" id="cont-email" name="email" placeholder="Email@Email.com">
-        
         <label for="cont-message">Your message:</label>
         <textarea id="cont-message" name="message" placeholder="Write your message here:">
-
+        </textarea>
         <input type="submit" Value="Submit">
-
       </form>
+    </div>
+    <div class="other-contact">
+
+
+
+
+
+    </div>
   </div>
 </section>
 
