finished conact, started blogs

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -40,7 +40,39 @@
   <!-- Main Section -->
 <section class="jumbotron">
   <div class="container">
-
+    <div class="blog-header">
+      <h2>My Blogs</h2>
+    </div>
+    <ul>
+      <li>
+        <div class="blog-cards">
+          <a href="#">
+            <h4>Blog 1</h4>
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="blog-cards">
+          <a href="#">
+            <h4>Blog 2</h4>
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="blog-cards">
+          <a href="#">
+            <h4>Blog 3</h4>
+          </a>
+        </div>
+      </li>
+      <li>
+        <div class="blog-cards">
+          <a href="#">
+            <h4>Blog 4</h4>
+          </a>
+        </div>
+      </li>
+    </ul>
   </div>
 </section>
 
