--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -51,8 +51,7 @@
         <label for="cont-email">Enter Email:</label>
         <input type="email" id="cont-email" name="email" placeholder="your@email.com">
         <label for="cont-message">Your message:</label>
-        <textarea id="cont-message" name="message" placeholder="Write your message here:">
-        </textarea>
+        <textarea id="cont-message" name="message" placeholder="Write your message here:"></textarea>
         <input type="submit" Value="Submit">
       </form>
     </div>
