--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -43,36 +43,38 @@
     <div class="blog-header">
       <h2>My Blogs</h2>
     </div>
-    <ul>
-      <li>
-        <div class="blog-cards">
-          <a href="#">
-            <h4>Blog 1</h4>
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="blog-cards">
-          <a href="#">
-            <h4>Blog 2</h4>
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="blog-cards">
-          <a href="#">
-            <h4>Blog 3</h4>
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="blog-cards">
-          <a href="#">
-            <h4>Blog 4</h4>
-          </a>
-        </div>
-      </li>
-    </ul>
+    <div class="blog-cards">
+      <ul>
+        <li>
+          <div class="blog-card blog-card1">
+            <a href="#">
+              <h4>Blog 1</h4>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="blog-card blog-card2">
+            <a href="#">
+              <h4>Blog 2</h4>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="blog-card blog-card3">
+            <a href="#">
+              <h4>Blog 3</h4>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="blog-card blog-card4">
+            <a href="#">
+              <h4>Blog 4</h4>
+            </a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
 
