Adjusted index image to be circular not oval

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
   <!-- Main Section -->
 <section class="jumbotron">
   <div class="container">
+    <h1>Dillon's Portfolio</h1>
     <div class="main-image">
-      <h1>Dillon's Portfolio</h1>
-      <img src="assets/hero-img.jpeg" alt="A picture of my wife and me on holiday in New Zealand" srcset=""> 
-      <h2>Welcome!</h2>
+      <div class="image-container"></div> <!--originally I had this as an actual image with alt text, however was unable to locate a way to make the image round, it kept staying as an oval-->
     </div>
+    <h2 class="welcome">Welcome!</h2>
     <div class="main-text">
       <h2>A brief introduction</h2>
       <p>I am a Product Manager of DocuSign at Bendigo Adelaide Bank, where I am responsible for the overall use of the platform, escalated enquiries and working with multiple departments on how they may implement DocuSign into their operations.</p>
