--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -47,33 +47,59 @@
       <ul>
         <li>
           <div class="blog-card blog-card1">
-            <a href="#">
+            <a href="#blog1">
               <h4>Blog 1</h4>
             </a>
           </div>
         </li>
         <li>
           <div class="blog-card blog-card2">
-            <a href="#">
+            <a href="#blog2">
               <h4>Blog 2</h4>
             </a>
           </div>
         </li>
         <li>
           <div class="blog-card blog-card3">
-            <a href="#">
+            <a href="#blog3">
               <h4>Blog 3</h4>
             </a>
           </div>
         </li>
         <li>
           <div class="blog-card blog-card4">
-            <a href="#">
+            <a href="#blog4">
               <h4>Blog 4</h4>
             </a>
           </div>
         </li>
       </ul>
+    </div>
+    <div class="blog-text">
+      <div id="blog1">
+        <h2>Blog 1</h2>
+        <h4>Published: 17 March 2022</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
+        Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
+      </div>
+      <div id="blog2">
+        <h2>Blog 2</h2>
+        <h4>Published: 30 March 2022</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
+        Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
+      </div>
+      <div id="blog3">
+        <h2>Blog 3</h2>
+        <h4>Published: 27 May 2022</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
+        Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
+      </div>
+      <div id="blog4">
+        <h2>Blog 4</h2>
+        <h4>Published: 23 February 2023</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
+        Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
+      </div>
     </div>
   </div>
 </section>
