Finished Blog (mobile) starting about

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -13,7 +13,7 @@
   <!-- header section -->
 <header class="header">
   <div class="container">
-    <a href="index.html"><img src="../assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
+    <a href="../index.html"><img src="../assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
   </div>
 </header>
   
