--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -13,7 +13,7 @@
   <!-- header section -->
 <header class="header">
   <div class="container">
-    <a href="index.html"><img src="../assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
+    <a href="../index.html"><img src="../assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
   </div>
 </header>
   
@@ -48,28 +48,28 @@
         <li>
           <div class="blog-card blog-card1">
             <a href="#blog1">
-              <h4>Blog 1</h4>
+              <h2>Blog 1</h2>
             </a>
           </div>
         </li>
         <li>
           <div class="blog-card blog-card2">
             <a href="#blog2">
-              <h4>Blog 2</h4>
+              <h2>Blog 2</h2>
             </a>
           </div>
         </li>
         <li>
           <div class="blog-card blog-card3">
             <a href="#blog3">
-              <h4>Blog 3</h4>
+              <h2>Blog 3</h2>
             </a>
           </div>
         </li>
         <li>
           <div class="blog-card blog-card4">
             <a href="#blog4">
-              <h4>Blog 4</h4>
+              <h2>Blog 4</h2>
             </a>
           </div>
         </li>
