--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -44,6 +44,7 @@
       <h2>How to contact</h2>
       <h4>Either use this handy form, or use any of the other details provided!</h4>
     </div>
+    <!--Form fields-->
     <div class="form-part">
       <form name="contact-form" method="POST" data-netlify="true">
         <label for="cont-name">Full Name:</label>
@@ -55,6 +56,7 @@
         <input type="submit" Value="Submit">
       </form>
     </div>
+    <!--Other contact details-->
     <div class="other-contact">
       <img src="../assets/map.png" alt="A map of the Geelong, Victoria area" srcset="">
       <h4>Location:</h4>
