Finished mobile design project

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -40,7 +40,80 @@
   <!-- Main Section -->
 <section class="jumbotron">
   <div class="container">
-
+    <h1>Who am I?</h1>
+    <h3>Work history</h3>
+    <!-- List of recent roles as a Highlight -->
+    <div class="work">
+      <ul>
+        <li class="work-dot">
+          <p>Digital Optimisation Lead</p>
+          <p>(Current Role)</p>
+        </li class="work-dot">
+        <li class="work-dot">
+          <p>Lending Education & Capability Manager</p>
+        </li>
+        <li class="work-dot">
+          <p>Lending Support Lead</p>
+        </li class="work-dot">
+        <li class="work-dot">
+          <p>Business Support Team Leader (COVID response)</p>
+        </li class="work-dot">
+        <li class="work-dot">
+          <p>Local Business Manager</p>
+        </li class="work-dot">
+        <li class="work-dot">
+          <p>Assistant Branch Manager</p>
+        </li class="work-dot">
+      </ul>
+      <div class="work-blurb">
+        <h4>Highlights:</h4>
+        <p>I currently work at Bendigo Adelaide Bank as a Product Lead - Digital Optimisation, in this role I am the product manager for our DocuSign platform.</p>
+        <p>I am responsible for:</p>
+        <ul>
+          <li>
+            <p>Organisation Administration</p>
+          </li>
+          <li>
+            <p>Building new DocuSign templates</p>
+          </li>
+          <li>
+            <p>Working with Business units to automate processes</p>
+          </li>
+          <li>
+            <p>Building and Generating reports on use and benefit for senior leadership</p>
+          </li>
+        </ul>
+        <p>I have been in this role since July 2022.</p>
+        <p>While at present what I work with is low-code (MS Power Automate, DocuSign Document Generation) I have been interested in learning what I can about potential integrations with other systems.</p>
+        <div class="resume">
+        <p>If you're interested you can find my resume here:</p> 
+        <a href="">
+          <img src="../assets/pdf.png" alt="an image showing a pdf document">
+        </a>
+        </div>
+      </div>
+    </div>
+    <!-- Personal -->
+    <div class="personal">
+      <h3>Personal</h3>
+      <img src="" alt=""> <!--Image of hobby-->
+      <p>My Hobbies include:</p>
+      <ul>
+        <li>
+          <p>Video Games</p>
+        </li>
+        <li>
+          <p>Board Games</p>
+        </li>
+        <li>
+          <p>Woodworking</p>
+        </li>
+      </ul>
+      <p>I have just finished building my first "project" in woodworking, being a board game dining table.</p>
+      <p>This is a table that has removable leafs that are inset to the table to have a solid top, and when removed provides an recessed felt covered game table.</p>
+      <img src="" alt="">
+      <p>I have recently been playing the board game ROOT with my wife, other favourites include Unfair, Lords of Waterdeep, Dune and Star Wars: Imperial Assault</p>
+    </div>
   </div>
 </section>
 
