3/4 desktop design complete - working on Contact page

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,15 @@
 </nav>
 
   <!-- Main Section -->
-<section class="jumbotron">
-  <div class="container">
+  <section class="jumbotron">
     <h1>Dillon's Portfolio</h1>
-    <div class="main-image">
-      <div class="image-container"></div> <!--originally I had this as an actual image with alt text, however was unable to locate a way to make the image round, it kept staying as an oval-->
-    </div>
-    <h2 class="welcome">Welcome!</h2>
+    <div class="container">
+    <div class="left-split">
+      <div class="main-image">
+        <div class="image-container"></div> <!--originally I had this as an actual image with alt text, however was unable to locate a way to make the image round, it kept staying as an oval-->
+      </div>
+      <h2 class="welcome">Welcome!</h2>
+  </div>
     <div class="main-text">
       <h2>A brief introduction</h2>
       <p>I am a Product Manager of DocuSign at Bendigo Adelaide Bank, where I am responsible for the overall use of the platform, escalated enquiries and working with multiple departments on how they may implement DocuSign into their operations.</p>
