--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -39,11 +39,11 @@
 
   <!-- Main Section -->
 <section class="jumbotron">
+  <h1>Who am I?</h1>
   <div class="container">
-    <h1>Who am I?</h1>
-    <h3>Work history</h3>
     <!-- List of recent roles as a Highlight -->
     <div class="work">
+      <h3>Work history</h3>
       <ul>
         <li class="work-dot">
           <p>Digital Optimisation Lead</p>
@@ -96,7 +96,7 @@
     <!-- Personal -->
     <div class="personal">
       <h3>Personal</h3>
-      <img src="" alt=""> <!--Image of hobby-->
+      <img src="../assets/board-game.jpeg" alt="an image of the imperial assault boardgame setup for play"> <!--Image of hobby-->
       <p>My Hobbies include:</p>
       <ul>
         <li>
@@ -111,7 +111,7 @@
       </ul>
       <p>I have just finished building my first "project" in woodworking, being a board game dining table.</p>
       <p>This is a table that has removable leafs that are inset to the table to have a solid top, and when removed provides an recessed felt covered game table.</p>
-      <img src="" alt="">
+      <img src="../assets/table.jpeg" alt="A picture of my in-progress dinner table">
       <p>I have recently been playing the board game ROOT with my wife, other favourites include Unfair, Lords of Waterdeep, Dune and Star Wars: Imperial Assault</p>
     </div>
   </div>
