--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -42,8 +42,6 @@
   <h1>How to contact</h1>
   <h4>Either use this handy form, or use any of the other details provided!</h4>
   <div class="container">
-    <div class="form-header">
-    </div>
     <!--Form fields-->
     <div class="form-part">
       <form name="contact-form" method="POST" data-netlify="true">
@@ -59,14 +57,20 @@
     <!--Other contact details-->
     <div class="other-contact">
       <img src="../assets/map.png" alt="A map of the Geelong, Victoria area" srcset="">
-      <h4>Location:</h4>
-      <p>123 Fake Street,</p>
-      <p>Geelong, Victoria,</p>
-      <p>Australia</p>
-      <h4>Phone:</h4>
-      <p>+61412 345 678</p>
-      <h4>Email</h4>
-      <p>14582@coderacademy.edu.au</p>
+      <div class="cont">
+        <h4>Location:</h4>
+        <p>123 Fake Street,</p>
+        <p>Geelong, Victoria,</p>
+        <p>Australia.</p>
+      </div>
+      <div class="cont">
+        <h4>Phone:</h4>
+        <p>+61412 345 678</p>
+      </div>
+      <div class="cont">
+        <h4>Email:</h4>
+        <p>14582@coderacademy.edu.au</p>
+      </div>
     </div>
   </div>
 </section>
