--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
       <li>
         <a href="pages/blog.html">Blogs</a> <!--Adds a sublist under the Blogs as a dropdown -->
         <ul class="blog-dropdown">
-          <li><a href="http://">Blog 1</a></li>
-          <li><a href="http://">Blog 2</a></li>
-          <li><a href="http://">Blog 3</a></li>
-          <li><a href="http://">Blog 4</a></li>
+          <li><a href="pages/blog.html#blog1">Blog 1</a></li>
+          <li><a href="pages/blog.html#blog2">Blog 2</a></li>
+          <li><a href="pages/blog.html#blog3">Blog 3</a></li>
+          <li><a href="pages/blog.html#blog4">Blog 4</a></li>
         </ul>
       </li>
       <li><a href="pages/contact.html">Contact</a></li>
@@ -61,12 +61,12 @@
   <div class="container">
     <ul class="left-footer">
       <li>
-        <a href="#">
+        <a href="https://github.com/dilbot-cot">
           <img src="assets/github.svg" alt="GitHub">
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.linkedin.com/in/dillon-cotter-a94516194/">
           <img src="assets/linkedin.svg" alt="LinkedIn">
         </a>
       </li>
