--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -87,7 +87,7 @@
         <p>While at present what I work with is low-code (MS Power Automate, DocuSign Document Generation) I have been interested in learning what I can about potential integrations with other systems.</p>
         <div class="resume">
         <p>If you're interested you can find my resume here:</p> 
-        <a href="">
+        <a href="../assets/resume.pdf">
           <img src="../assets/pdf.png" alt="an image showing a pdf document">
         </a>
         </div>
