Minor styling changes for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,14 @@
       <h2 class="welcome">Welcome!</h2>
   </div>
     <div class="main-text">
-      <h2>A brief introduction</h2>
-      <p>I am a Product Manager of DocuSign at Bendigo Adelaide Bank, where I am responsible for the overall use of the platform, escalated enquiries and working with multiple departments on how they may implement DocuSign into their operations.</p>
-      <p>I am also a recent full stack Web Developer with experience in HTML and CSS after studying with Coder Academy.</p>
-      <p>This is my first significant step into the Information Technology sector after a lifetime of high interest.</p>
+      <div class="main-text-header">
+        <h2>A brief introduction</h2>
+      </div>
+      <div class="main-text-body"> 
+        <p>I am a Product Manager of DocuSign at Bendigo Adelaide Bank, where I am responsible for the overall use of the platform, escalated enquiries and working with multiple departments on how they may implement DocuSign into their operations.</p>
+        <p>I am also a recent full stack Web Developer with experience in HTML and CSS after studying with Coder Academy.</p>
+        <p>This is my first significant step into the Information Technology sector after a lifetime of high interest.</p>
+      </div>
     </div>
   </div>
 </section>
