--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -77,12 +77,14 @@
       <div id="blog1">
         <h2>Blog 1</h2>
         <h4>Published: 17 March 2022</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
-        Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
-        <img src="../assets/puppy.jpg" alt="A picture of a puppy lying down">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci laudantium itaque deleniti dicta praesentium soluta, consequuntur, odit eos rerum sunt totam vel atque pariatur inventore quibusdam architecto quas, amet eligendi.
-        Perspiciatis nisi molestiae, similique molestias quidem repudiandae incidunt harum repellat earum necessitatibus nobis? Assumenda nisi asperiores aspernatur voluptas, voluptatibus quae vitae iure ex alias, cum architecto recusandae, hic fuga earum.
-        Eius soluta veritatis dicta ipsam, dolores, quam reiciendis delectus unde nobis, cupiditate itaque vero. Culpa autem nobis nihil reiciendis, fugit vitae nemo quasi assumenda illo eius dolorem quidem harum impedit.</p>
+        <div class="test">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
+          Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
+          <img src="../assets/puppy.jpg" alt="A picture of a puppy lying down">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci laudantium itaque deleniti dicta praesentium soluta, consequuntur, odit eos rerum sunt totam vel atque pariatur inventore quibusdam architecto quas, amet eligendi.
+          Perspiciatis nisi molestiae, similique molestias quidem repudiandae incidunt harum repellat earum necessitatibus nobis? Assumenda nisi asperiores aspernatur voluptas, voluptatibus quae vitae iure ex alias, cum architecto recusandae, hic fuga earum.
+          Eius soluta veritatis dicta ipsam, dolores, quam reiciendis delectus unde nobis, cupiditate itaque vero. Culpa autem nobis nihil reiciendis, fugit vitae nemo quasi assumenda illo eius dolorem quidem harum impedit.</p>
+        </div>
       </div>
       <div id="blog2">
         <h2>Blog 2</h2>
