Comments in code finished

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
   <section class="jumbotron">
     <h1>Dillon's Portfolio</h1>
     <div class="container">
-    <div class="left-split">
+    <div class="left-split"> <!--Creates 2 separate 'containers' that allow a left and right split when using flex-->
       <div class="main-image">
-        <div class="image-container"></div> <!--originally I had this as an actual image with alt text, however was unable to locate a way to make the image round, it kept staying as an oval-->
+        <div class="image-container"></div> <!--Decided to use a background image and format the div-->
       </div>
       <h2 class="welcome">Welcome!</h2>
   </div>
