--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -45,7 +45,7 @@
     <div class="work">
       <h3>Work history</h3>
       <ul>
-        <li class="work-dot">
+        <li class="work-dot"> <!--These classes are a hold over from some previous formatting attempts, have left them incase this needed to be altered in the future.-->
           <p>Digital Optimisation Lead</p>
           <p>(Current Role)</p>
         </li class="work-dot">
@@ -85,7 +85,7 @@
         </ul>
         <p>I have been in this role since July 2022.</p>
         <p>While at present what I work with is low-code (MS Power Automate, DocuSign Document Generation) I have been interested in learning what I can about potential integrations with other systems.</p>
-        <div class="resume">
+        <div class="resume"> <!--Added a specific div to the resume section so I can add a border-->
         <p>If you're interested you can find my resume here:</p> 
         <a href="../assets/resume.pdf">
           <img src="../assets/pdf.png" alt="an image showing a pdf document">
