--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -41,7 +41,7 @@
 <section class="jumbotron">
   <h1>My Blogs</h1>
   <div class="container">
-    <div class="blog-cards">
+    <div class="blog-cards"> <!--Adds the list of blogs, with links within the page.-->
       <ul>
         <li>
           <div class="blog-card blog-card1">
