--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -44,7 +44,7 @@
   <div class="container">
     <!--Form fields-->
     <div class="form-part">
-      <form name="contact-form" method="POST" data-netlify="true">
+      <form name="contact-form" method="POST" data-netlify="true"> <!--coding found on Netlify on how to make a useable form with submission-->
         <label for="cont-name">Full Name:</label>
         <input type="text" id="cont-name" name="full-name" placeholder="Your Name">
         <label for="cont-email">Enter Email:</label>
