Corrected some semantic issues

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 </nav>
 
   <!-- Main Section -->
+  <main>
   <section class="jumbotron">
     <h1>Dillon's Portfolio</h1>
     <div class="container">
@@ -59,6 +60,7 @@
     </div>
   </div>
 </section>
+</main>
 
 <!-- Footer section -->
 <footer class="footer">
