--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -38,6 +38,7 @@
 </nav>
 
   <!-- Main Section -->
+<main>
 <section class="jumbotron">
   <h1>Who am I?</h1>
   <div class="container">
@@ -116,6 +117,7 @@
     </div>
   </div>
 </section>
+</main>
 
 <!-- Footer section -->
 <footer class="footer">
