--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -38,6 +38,7 @@
 </nav>
 
   <!-- Main Section -->
+<main>
 <section class="jumbotron">
   <h1>My Blogs</h1>
   <div class="container">
@@ -73,20 +74,18 @@
         </li>
       </ul>
     </div>
-    <div class="blog-text">
-      <div id="blog1">
+    <article class="blog-text">
+      <article id="blog1">
         <h2>Blog 1</h2>
         <h4>Published: 17 March 2022</h4>
-        <div class="test">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
           Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
           <img src="../assets/puppy.jpg" alt="A picture of a puppy lying down">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci laudantium itaque deleniti dicta praesentium soluta, consequuntur, odit eos rerum sunt totam vel atque pariatur inventore quibusdam architecto quas, amet eligendi.
           Perspiciatis nisi molestiae, similique molestias quidem repudiandae incidunt harum repellat earum necessitatibus nobis? Assumenda nisi asperiores aspernatur voluptas, voluptatibus quae vitae iure ex alias, cum architecto recusandae, hic fuga earum.
           Eius soluta veritatis dicta ipsam, dolores, quam reiciendis delectus unde nobis, cupiditate itaque vero. Culpa autem nobis nihil reiciendis, fugit vitae nemo quasi assumenda illo eius dolorem quidem harum impedit.</p>
-        </div>
-      </div>
-      <div id="blog2">
+      </article>
+      <article id="blog2">
         <h2>Blog 2</h2>
         <h4>Published: 30 March 2022</h4>
         <img src="../assets/cabin.jpg" alt="a picture of a cabin in some woods">
@@ -95,8 +94,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, eos iusto officiis earum fugit similique libero magnam atque harum, porro vero dolorem qui consequatur numquam maxime dolorum? Maxime, modi nobis!
         Possimus illo eaque nam explicabo ex. Nulla placeat fugiat non aliquam repellendus iure mollitia saepe qui porro possimus sequi, ipsam magni nisi id odio? Nostrum nihil ut tempora aliquam molestiae?
         Quos mollitia dignissimos assumenda eligendi dolor itaque voluptate sapiente nobis soluta culpa, beatae voluptatum, repellat esse obcaecati? Quas odit voluptate vitae odio, eligendi incidunt error, eaque delectus exercitationem aliquid tempore!</p>
-      </div>
-      <div id="blog3">
+      </article>
+      <article id="blog3">
         <h2>Blog 3</h2>
         <h4>Published: 27 May 2022</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
@@ -105,18 +104,19 @@
         Pariatur cupiditate quibusdam molestiae officia quod. Ullam pariatur error porro officiis quisquam! Earum reprehenderit consectetur ullam autem quod praesentium quisquam consequuntur tempore, dolor sit fugit velit ab error, quis quasi?
         Voluptate aliquam repellendus optio molestias, corrupti rem corporis earum architecto qui dolores, a delectus laudantium minima. Eveniet quas nulla, numquam aspernatur, sequi vel, voluptas modi saepe optio recusandae quisquam veniam?</p>
         <img src="../assets/camera.jpg" alt="a picture of a camera and 3 photos on a map">
-      </div>
-      <div id="blog4">
+      </article>
+      <article id="blog4">
         <h2>Blog 4</h2>
         <h4>Published: 23 February 2023</h4>
         <img src="../assets/burger.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
         Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
         <img src="../assets/bread.jpg" alt="">
-      </div>
+      </article>
     </div>
   </div>
 </section>
+</main>
 
 <!-- Footer section -->
 <footer class="footer">
