--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -38,6 +38,7 @@
 </nav>
 
   <!-- Main Section -->
+<main>
 <section class="jumbotron">
   <h1>How to contact</h1>
   <h4>Either use this handy form, or use any of the other details provided!</h4>
@@ -74,6 +75,7 @@
     </div>
   </div>
 </section>
+</main>
 
 <!-- Footer section -->
 <footer class="footer">
