Added 5th blog, altered formatting as required

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
           <li><a href="pages/blog.html#blog2">Blog 2</a></li>
           <li><a href="pages/blog.html#blog3">Blog 3</a></li>
           <li><a href="pages/blog.html#blog4">Blog 4</a></li>
+          <li><a href="pages/blog.html#blog5">Blog 5</a></li>
         </ul>
       </li>
       <li><a href="pages/contact.html">Contact</a></li>
