--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -30,6 +30,7 @@
           <li><a href="blog.html#blog2">Blog 2</a></li>
           <li><a href="blog.html#blog3">Blog 3</a></li>
           <li><a href="blog.html#blog4">Blog 4</a></li>
+          <li><a href="blog.html#blog5">Blog 5</a></li>
         </ul>
       </li>
       <li><a href="contact.html">Contact</a></li>
@@ -69,6 +70,13 @@
           <div class="blog-card blog-card4">
             <a href="#blog4">
               <h2>Blog 4</h2>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="blog-card blog-card5">
+            <a href="#blog5">
+              <h2>Blog 5</h2>
             </a>
           </div>
         </li>
@@ -112,6 +120,22 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
         Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.</p>
         <img src="../assets/bread.jpg" alt="">
+      </article>
+      <article id="blog5">
+        <h2>Blog 5</h2>
+        <h4>Published: 2 June 2023</h4>
+        <img src="../assets/computer.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore amet ullam ea aliquam id pariatur fugiat fuga eligendi? Possimus quod, velit sit vero aperiam ratione dignissimos accusamus culpa consequuntur!
+        Fugit, praesentium laboriosam. Autem porro iusto inventore eveniet ipsam vero vitae blanditiis doloribus quam fugiat, repudiandae consectetur officia dignissimos animi omnis neque excepturi mollitia veritatis quod qui molestias cum provident.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora omnis illo voluptate debitis veritatis, quas aliquam ratione, magnam quisquam reiciendis maiores? Velit ipsa laboriosam aliquid optio, ipsam nam voluptatibus ad?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam accusamus quae inventore deleniti ab. Nostrum aliquam corrupti, nulla aspernatur enim atque ipsam error. Sapiente nesciunt expedita reprehenderit odio velit laboriosam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quae, similique esse deleniti accusamus, fuga soluta obcaecati voluptates quisquam suscipit, consequuntur omnis adipisci asperiores eos quam quia nihil ratione nisi?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus dignissimos vel animi eum non? Deserunt dolores soluta ex, ratione modi quaerat fugiat ea sint laborum corporis explicabo quis iusto quas!
+        Voluptate saepe rerum magni inventore nihil velit qui, cum iusto quam nulla reprehenderit dolorum veritatis quibusdam tempora hic, sapiente ipsa, ratione laborum labore soluta dolorem expedita beatae iure laudantium. Accusamus?
+        Dolorum iusto, voluptatibus excepturi, deleniti culpa, numquam aspernatur similique ullam voluptas doloremque esse laudantium fuga quos? Dolor totam, sit culpa, beatae ex odio ab, ratione labore veritatis necessitatibus deleniti vel?
+        Praesentium nulla vel qui inventore beatae non eveniet, numquam saepe maiores perferendis a ipsam debitis velit? Quia pariatur sint cum voluptate temporibus, iusto ullam quisquam magnam ut, dolorem fugit laboriosam.
+        Pariatur molestiae ad voluptatibus libero, labore incidunt tenetur asperiores voluptatum unde temporibus autem quibusdam ullam illo id voluptatem corrupti ratione consectetur modi. Hic quaerat voluptas labore tempora ad repellat ex.
+        Praesentium reiciendis necessitatibus molestiae sit quibusdam ipsa tenetur est eos placeat hic, consequuntur esse odit cupiditate perferendis vero sunt accusamus deleniti soluta voluptatibus repudiandae tempore ipsam, molestias quam rerum. Fugiat?</p>
       </article>
     </div>
   </div>
