--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -30,6 +30,7 @@
           <li><a href="blog.html#blog2">Blog 2</a></li>
           <li><a href="blog.html#blog3">Blog 3</a></li>
           <li><a href="blog.html#blog4">Blog 4</a></li>
+          <li><a href="blog.html#blog5">Blog 5</a></li>
         </ul>
       </li>
       <li><a href="contact.html">Contact</a></li>
